fixed checkbox alignment

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -17,6 +17,11 @@
   flex: 1;
 }
 
-#checkbox-group{
-  margin-left: 1rem;
+.form-check{
+  padding-left: 0px;
+  margin-bottom: 1rem;
+}
+
+#show-in-list{
+  margin-left: 0.5rem;
 }
